--- a/css/estilo.css
+++ b/css/estilo.css
@@ -63,6 +63,7 @@ header img {
     width: 75px;
     height: 53px;
     margin: 5px 11px 0px 11px;
+    cursor: pointer;
 }
 
 footer {
@@ -116,6 +117,8 @@ menu {
 
 main {
     margin-top: 106px;
+    margin-bottom: 106px;
+    width: 100%;
 }
 
 .cinza {
@@ -123,10 +126,11 @@ main {
 }
 
 .mensagem {
+    background-color: #ffffff;
     display: flex;
     align-items: center;
     width: 100%;
-    height: 40px;
+    min-height: 40px;
     margin: 2px 8px;
     border-radius: 2px;
 }
@@ -136,7 +140,7 @@ main {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 40px;
+    min-height: 40px;
     margin: 2px 8px;
 }
 
@@ -145,7 +149,7 @@ main {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 40px;
+    min-height: 40px;
     margin: 2px 8px;
 }
 
